test/sema/s25/fail_state_in_seq.nsl
// SPDX-License-Identifier: Apache-2.0 WITH LLVM-exception
//
// test/sema/s25/fail_state_in_seq.nsl — S25 (lang.ebnf:944) fail
// variant. Inside a seq block, `goto` must target a label — a
// state_name reference (from outside the state body) is the
// cross-kind violation.
//
// Frozen diagnostic per `contracts/diagnostic-string.contract.md`:
//   'goto' inside a 'seq' block must target a label declared in the same block (S25)
//
// **Phase 4a TDD red state**: no S25 checker exists; FAILS until
// Phase 4b T061.

// RUN: not %nslc -emit=ast %s 2>&1 | FileCheck %s

module m_fail {
  proc_name p;
  proc p {
    state_name s1;
    seq {
      goto s1;
    }
  }
}

// CHECK: error: 'goto' inside a 'seq' block must target a label declared in the same block (S25)
